5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1679_1879.log
== TEST (2019-05-02 10:55:27) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

-- OUTPUT:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:55:27) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

-- EXECUTION TIME:
0.201162
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:

-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:

-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:55:27) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

-- EXECUTION TIME:
0.20157
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:

-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:

-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:10:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero de hrs trabalhadas extras: "))
y=float(input("numero de hrs nao trabalhadas: "))
H=x-1/4*y
if(x>0):
	if(H>400):
		print(x,"extras","e",y,"de","falta")
		print("R$",500)
	elif(H<=400)
	 	print(x,"extras","e",y,"de","falta")
		print("R$",100)
-- ERROR:
File "XXXX", line 9
    elif(H<=400)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:10:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero de hrs trabalhadas extras: "))
y=float(input("numero de hrs nao trabalhadas: "))
H=x-1/4*y
if(x>0):
	if(H>400):
		print(x,"extras","e",y,"de","falta")
		print("R$",500)
	elif(H<=400):
	 	print(x,"extras","e",y,"de","falta")
		print("R$",100)
-- ERROR:
File "XXXX", line 11
    print("R$",100)
                  ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:10:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero de hrs trabalhadas extras: "))
y=float(input("numero de hrs nao trabalhadas: "))
H=x-1/4*y
if(x>0):
	if(H>400):
		print(x,"extras","e",y,"de","falta")
		print("R$",500)
	elif(H<=400):
		print(x,"extras","e",y,"de","falta")
		print("R$",100)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 12:10:37) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero de hrs trabalhadas extras: "))
y=float(input("numero de hrs nao trabalhadas: "))
H=x-1/4*y
if(x>0):
	if(H>400):
		print(x,"extras","e",y,"de","falta")
		print("R$",500)
	elif(H<=400):
		print(x,"extras","e",y,"de","falta")
		print("R$",100)
-- EXECUTION TIME:
0.162692
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:10:41) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero de hrs trabalhadas extras: "))
y=float(input("numero de hrs nao trabalhadas: "))
H=x-1/4*y
if(x>0):
	if(H>400):
		print(x,"extras","e",y,"de","falta")
		print("R$",500)
	elif(H<=400):
		print(x,"extras","e",y,"de","falta")
		print("R$",100)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:12:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero de hrs trabalhadas extras: "))
y=float(input("numero de hrs nao trabalhadas: "))
H=x-1/4*y
A=500
B=100
if(x>0):
	if(H>400):
		print(x,"extras","e",y,"de","falta")
		print("R$",float(A))
	elif(H<=400):
		print(x,"extras","e",y,"de","falta")
		print("R$",float(B))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:12:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero de hrs trabalhadas extras: "))
y=float(input("numero de hrs nao trabalhadas: "))
H=x-1/4*y
A=500
B=100
if(x>0):
	if(H>400):
		print(x,"extras","e",y,"de","falta")
		print("R$",float(A))
	elif(H<=400):
		print(x,"extras","e",y,"de","falta")
		print("R$",float(B))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:12:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero de hrs trabalhadas extras: "))
y=float(input("numero de hrs nao trabalhadas: "))
H=x-1/4*y
A=500
B=100
if(x>0):
	if(H>400):
		print(x,"extras","e",y,"de","falta")
		print("R$",float(A))
	elif(H<=400):
		print(x,"extras","e",y,"de","falta")
		print("R$",float(B))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:12:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero de hrs trabalhadas extras: "))
y=float(input("numero de hrs nao trabalhadas: "))
H=x-1/4*y
A=500
B=100
if(x>0):
	if(H>400):
		print(x,"extras","e",y,"de","falta")
		print("R$",float(A))
	elif(H<=400):
		print(x,"extras","e",y,"de","falta")
		print("R$",float(B))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:12:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero de hrs trabalhadas extras: "))
y=float(input("numero de hrs nao trabalhadas: "))
H=x-1/4*y
A=500
B=100
if(x>0):
	if(H>400):
		print(x,"extras","e",y,"de","falta")
		print("R$",float(A))
	elif(H<=400):
		print(x,"extras","e",y,"de","falta")
		print("R$",float(B))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:12:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero de hrs trabalhadas extras: "))
y=float(input("numero de hrs nao trabalhadas: "))
H=x-1/4*y
A=500
B=100
if(x>0):
	if(H>400):
		print(x,"extras","e",y,"de","falta")
		print("R$",float(A))
	elif(H<=400):
		print(x,"extras","e",y,"de","falta")
		print("R$",float(B))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:12:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero de hrs trabalhadas extras: "))
y=float(input("numero de hrs nao trabalhadas: "))
H=x-1/4*y
A=500
B=100
if(x>0):
	if(H>400):
		print(x,"extras","e",y,"de","falta")
		print("R$",float(A))
	elif(H<=400):
		print(x,"extras","e",y,"de","falta")
		print("R$",float(B))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 12:12:46) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("numero de hrs trabalhadas extras: "))
y=float(input("numero de hrs nao trabalhadas: "))
H=x-1/4*y
A=500
B=100
if(x>0):
	if(H>400):
		print(x,"extras","e",y,"de","falta")
		print("R$",float(A))
	elif(H<=400):
		print(x,"extras","e",y,"de","falta")
		print("R$",float(B))
-- EXECUTION TIME:
0.153467
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
